; ModuleID = '/home/carl/AnghaBench/php-src/Zend/extr_zend_stream.c_zend_stream_stdio_closer.c'
source_filename = "/home/carl/AnghaBench/php-src/Zend/extr_zend_stream.c_zend_stream_stdio_closer.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@stdin = common dso_local global i32* null, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i8*)* @zend_stream_stdio_closer to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @zend_stream_stdio_closer(i8* %0) #0 {
  %2 = alloca i8*, align 8
  store i8* %0, i8** %2, align 8
  %3 = load i8*, i8** %2, align 8
  %4 = icmp ne i8* %3, null
  br i1 %4, label %5, label %14

5:                                                ; preds = %1
  %6 = load i8*, i8** %2, align 8
  %7 = bitcast i8* %6 to i32*
  %8 = load i32*, i32** @stdin, align 8
  %9 = icmp ne i32* %7, %8
  br i1 %9, label %10, label %14

10:                                               ; preds = %5
  %11 = load i8*, i8** %2, align 8
  %12 = bitcast i8* %11 to i32*
  %13 = call i32 @fclose(i32* %12)
  br label %14

14:                                               ; preds = %10, %5, %1
  ret void
}

declare dso_local i32 @fclose(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
